--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: auth-service
-        image: vndmacacrdd9f.azurecr.io/authservice
+        image: vndmacacrdd9f.azurecr.io/authservice:latest
         ports:
         - containerPort: 80
       imagePullSecrets:
