--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: auth-service
         image: vndmacacrdd9f.azurecr.io/authservice:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
       imagePullSecrets:
