--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: auth-service
         image: vndmacacrdd9f.azurecr.io/authservice:placeholdertag
+        envFrom:
+        - configMapRef:
+          name: auth-service
         ports:
         - containerPort: 80
       imagePullSecrets:
