Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,8 +47,7 @@ stages:
         configMapName: 'auth-service'
         forceUpdateConfigMap: true
         configMapArguments: |
-          --from-literal=other_server=$(other_server)
-          --from-literal=another_server=$(another_server)
+          --from-literal=other_server=$(other_server) --from-literal=another_server=$(another_server)
     - task: KubernetesManifest@0
       inputs:
         action: 'deploy'
