--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,11 +37,21 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+
     - task: Kubernetes@1
       inputs:
         connectionType: 'Kubernetes Service Connection'
         kubernetesServiceEndpoint: 'aks'
-        namespace: 'default'
+        command: 'apply'
+        arguments: '-f Manifests/namespace.yaml'
+        secretType: 'dockerRegistry'
+        containerRegistryType: 'Azure Container Registry'
+
+    - task: Kubernetes@1
+      inputs:
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceEndpoint: 'aks'
+        namespace: 'auth-service'
         secretType: 'dockerRegistry'
         containerRegistryType: 'Azure Container Registry'
         configMapName: 'auth-service'
@@ -52,6 +62,6 @@ stages:
       inputs:
         action: 'deploy'
         kubernetesServiceConnection: 'aks'
-        namespace: 'default'
-        manifests: './deploy.yaml'
+        namespace: 'auth-service'
+        manifests: 'Manifests/deploy.yaml'
         containers: 'vndmacacrdd9f.azurecr.io/authservice:$(tag)'
